# packaged

./: .gitignore  LICENSE  README.md  mypy.ini  setup.cfg  tox.ini
.github/workflows/: build-cross.yml  build.yml  tox.yml
example/: bubble_sort_curve.py  requirements.txt
example/mandelbrot/: mandelbrot.py  requirements.txt
example/minesweeper/: minesweeper.py  packaged.toml  setup.cfg
src/packaged/: __init__.py  __main__.py  cli.py  config.py
tests/: cli_test.py  conftest.py  packaged_test.py
tests/end_to_end/: packaged_test.py
tests/end_to_end/test_packages/configtest/: configtest.py  packaged.toml  setup.cfg
tests/end_to_end/test_packages/console_script_test/: script.zxpy
tests/numpy_pandas/: somefile.py
