[metadata]
name = packaged
version = 0.5.0
description = The easiest way to ship python applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/packaged
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = GPL-2.0-or-later
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
install_requires =
    yen>=0.4.2
    tomli>=1.1.0; python_version<'3.11'
    yaspin>=2.5.0
python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    packaged=packaged.cli:cli

[options.extras_require]
dev =
    black
    mypy
    pytest
    pytest-cov
    pytest-xdist
    tox

[options.package_data]
packaged =
	py.typed
    makeself.sh
    makeself-header.sh

[tool:pytest]
addopts = --cov --cov-report=term-missing -nauto
